--- a/responsible.css
+++ b/responsible.css
@@ -98,6 +98,10 @@
     grid-template-columns: 1fr 1fr 1fr;
   }
 
+  footer {
+    margin-top: 70px;
+  }
+
   footer a {
     font-size: 16px;
   }
